css_styles_or_something.css
		body {
			background-image: url("Images/bg.png");
		}
		
		p {
  		font-family: "Open Sans";
		  font-size: 30px;
		  word-wrap: break-word;
		}
		
		h1 {
  		font-family: "Open Sans";
		font-size:60px;
		}

		a {
  		color: #000000;
  		font-family: "Open Sans";
		}
		
		.inactive {
		text-decoration: none;
		font-family: "Pixelify Sans";
		font-size: 350%;
		color:#FFFFFF
		}
		
		.active {
		text-decoration: none;
  		color: #808080;
  		font-size: 350%;
		font-family: "Pixelify Sans";
		}

		.Papan_navigasi_atas
		{
		background-image: linear-gradient(to right, rgb(72, 72, 255), rgb(115, 151, 250));
		}

		.dark {
			color: white;
			background-image: linear-gradient(to bottom right, black, blue);
		}
		
		.box_of_images
		{
			width:25%;
			background-color: rgba(255, 255, 255, 0.3);
		}

		.center
		{
			display:block;
			margin-left: auto;
			margin-right: auto;
		}

		.pixel
		{
			font-family: "Pixelify Sans";
			text-decoration:"solid";
			font-size: 180%;
		}

		.Button {
			box-shadow:inset 0px 1px 0px 0px #ffffff;
			background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
			background-color:#ededed;
			border-radius:6px;
			border:1px solid #dcdcdc;
			display:relative;
			cursor:pointer;
			color:#777777;
			font-family:"Open Sans";
			font-size:10px;
			font-weight:bold;
			padding:6px 24px;
			text-decoration:none;
			text-shadow:0px 1px 0px #ffffff;
			height: 80%;
		}
		.Button:hover {
			background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
			background-color:#dfdfdf;
		}
		.Button:active {
			position:relative;
			top:1px;
		}

		img
		{
			opacity: 0.5
		}

		img:hover
		{
			opacity: 1
		}
		
		.flex
		{
			display: flex;
		}

		.list
		{
			font-size: 100%;
		}

		.code
		{
			font-family: monospace;
		}


		
		.scrolling-thing {

		border: 3px solid black;
		border-radius: 5px;
		overflow: hidden;
	  }
	  
	  .scroll-text {
		/* animation properties */
		-moz-transform: translateX(100%);
		-webkit-transform: translateX(100%);
		transform: translateX(100%);
		
		-moz-animation: my-animation 15s linear infinite;
		-webkit-animation: my-animation 15s linear infinite;
		animation: my-animation 15s linear infinite;
	  }
	  
	  /* for Firefox */
	  @-moz-keyframes my-animation {
		from { -moz-transform: translateX(100%); }
		to { -moz-transform: translateX(-100%); }
	  }
	  
	  /* for Chrome */
	  @-webkit-keyframes my-animation {
		from { -webkit-transform: translateX(100%); }
		to { -webkit-transform: translateX(-100%); }
	  }
	  
	  @keyframes my-animation {
		from {
		  -moz-transform: translateX(100%);
		  -webkit-transform: translateX(100%);
		  transform: translateX(100%);
		}
		to {
		  -moz-transform: translateX(-100%);
		  -webkit-transform: translateX(-100%);
		  transform: translateX(-100%);
		}
	}
	
	.biginput {
  margin: auto;
  width: 50%;
  height: 10%;
}

	.centerx {
	margin:auto;
  	text-align:center;
  	width:50%
}

	.li {
		color:#101010;
	}

	.np {
		font-family: "Open Sans";
		text-align: center;
	}
	summary {
		font-family: "Open Sans";
		font-size:30;
		text-align: center;
	}

	details {
		font-family: "Open Sans";
		font-size:20;
		text-align: center;
	}

